# Blanda

./: test.html
Grupparbtete/: Index.html  resultat.html  style.css
Lektion_01/: requirements.txt
Lektion_01/application/: app.py
Lektion_01/application/templates/: index.html
Lektion_02/application/: app.py
Lektion_03/application/: app.py
Lektion_03/application/templates/: template.html
Lektion_04/application/: app.py
Lektion_04/application/templates/: error.html  footer.html  form.html  index.html  layout.html
Lektion_08/: pyproject.toml
indv_ver1/: attgöra.txt
indv_ver1/applications/: app.py
indv_ver1/applications/templates/: form.html  index.html  result.html
indv_ver2/applications/: app.py
indv_ver2/applications/static/css/: index.css  style.css  user_error.css
indv_ver2/applications/templates/: error.html  index.html  result.html  user_error.html
indv_ver2/tests/: test_1.py
