[project]
name = "mypackage"
version = "0.0.1"
dependencies = [
    "docutils",
    "requests <= 0.4",
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["mypackage*"]  # ["*"] by default
exclude = ["mypackage.tests*"]  # empty by default
namespaces = false  # true by default

[project.scripts]
cli-name = "mypkg.mymodule:some_func"

[tool.setuptools]
include-package-data = true
# This is already the default behaviour if you are using
# pyproject.toml to configure your build.
# You can deactivate that with `include-package-data = false`